# smart_feeds

./: .env  .env.example  .gitignore  Design Doc.md  Idea.md  NOTES.md  README.md  TODO.md  main.py  pyproject.toml  pytest.ini
.agents/rules/: documentation.md  package-management.md
.test_workspace/: sources.toml
debug_agent/: agent.py
debug_agents/browser_fetcher_agent/: agent.py
debug_agents/fetch_agent/: agent.py
debug_agents/http_fetcher_agent/: agent.py
debug_agents/summarize_agent/: agent.py
inputs_samples/: interests.md  sources.toml  sources.yaml
scripts/: backfill_seen_urls.py
src/: agent.py  config.py  main.py  retry_utils.py
src/agents/: agent.py  curator_agent.py  deep_dive_agent.py  fetcher_agent.py  summarizer_agent.py
src/smart_feeds/: config.py  main.py
src/smart_feeds/agents/: curator_agent.py  deep_dive_agent.py  fetcher_agent.py  summarizer_agent.py
src/smart_feeds/resources/: .env.example  config.toml.example  interests.md.example
src/smart_feeds/tools/: audio.py  dedup.py  http.py  image.py  mcp_browser.py  rss.py  storage.py
src/tools/: browser.py  dedup.py  http.py  image.py  mcp_browser.py  rss.py  storage.py
tests/: conftest.py  test_config.py  test_retry_utils.py
tests/agents/: test_curator_agent.py  test_fetcher_agent.py  test_summarizer_agent.py
tests/tools/: test_dedup.py  test_http.py  test_rss.py  test_storage.py
