[project]
name = "smart-feeds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.12",
    "google-adk>=1.18.0",
    "google-genai>=1.47.0",
    "html2text>=2025.4.15",
    "httpx",
    "playwright>=1.58.0",
    "python-crontab>=3.0.0",
    "python-dotenv>=1.2.1",
    "typer>=0.23.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[project.scripts]
smartfeeds = "smart_feeds.main:app"
